Fixes #59 The bottom of a data view not visible in Firefox / IE / Edge / (partly) Chrome

--- a/Website/Composite/styles/default/_helpers.less
+++ b/Website/Composite/styles/default/_helpers.less
@@ -22,12 +22,20 @@
 	float: right;
 }
 
-*.padded {
-	padding: 30px 30px 30px 40px;
+.padded {
+	padding: 30px 30px 0px 40px;
+
+	&>*:last-child {
+		margin-bottom: 30px; // FF ignore padding bottom for overflow: scroll
+	}
 }
 
 .padded-sm {
-	padding: 18px 20px;
+	padding: 18px 20px 0 20px;
+
+	&>*:last-child {
+		margin-bottom: 18px; // FF ignore padding bottom for overflow: scroll
+	}
 }
 
 .clearfix, .clearfloatelement {
